Add option available field